--- a/package.json
+++ b/package.json
@@ -3,6 +3,8 @@
     "@types/node": "^20.10.1"
   },
   "dependencies": {
+    "@types/d3": "^7.4.3",
+    "d3": "^7.8.5",
     "lodash": "^4.17.21"
   }
 }
